--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -1,4 +1,11 @@
 //
 // Bootstrap
 //
-@import "node_modules/bootstrap/scss/bootstrap";
+
+@import "bootstrap/variables";
+
+//
+// Components
+//
+
+@import "components/form";
