Conclusion, input styling

--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -9,5 +9,7 @@
 //
 
 @import "components/form";
+@import "components/form_wrapper";
 @import "components/fieldtype";
+@import "components/text_input";
 @import "components/step";
