--- a/resources/scss/bootstrap/_variables.scss
+++ b/resources/scss/bootstrap/_variables.scss
@@ -14,3 +14,7 @@ $font-family-sans-serif: 'General Sans', sans-serif;
 
 
 $headings-font-family: 'Neometric Alt', sans-serif;
+
+
+$input-btn-focus-color-opacity: .5;
+$input-btn-border-width: 0;
