--- a/resources/scss/components/_fieldtype.scss
+++ b/resources/scss/components/_fieldtype.scss
@@ -4,4 +4,11 @@
         padding: .5rem;
         border-radius: $border-radius;
     }
+
+    label.required,
+    .label.required {
+        &::after{
+            content: "*";
+        }
+    }
 }
