--- a/resources/scss/components/_fieldtype.scss
+++ b/resources/scss/components/_fieldtype.scss
@@ -7,8 +7,54 @@
 
     label.required,
     .label.required {
-        &::after{
+        &::after {
             content: "*";
+        }
+    }
+
+    .has-assets {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        .has-asset {
+
+            [type=radio],
+            [type=checkbox] {
+                position: absolute;
+                opacity: 0;
+                width: 0;
+                height: 0;
+            }
+
+            [type=radio]+.asset,
+            [type=checkbox]+.asset {
+                cursor: pointer;
+            }
+
+            [type=radio]:checked+.asset,
+            [type=radio]:focus+.asset,
+            [type=radio]:hover+.asset,
+            [type=checkbox]:checked+.asset,
+            [type=checkbox]:focus+.asset,
+            [type=checkbox]:hover+.asset {
+                border-radius: $border-radius;
+                box-shadow: 0px 0px 10px 0px $primary;
+                transition: all .3s ease-in-out;
+            }
+
+            .asset,
+            & {
+                width: 200px;
+                height: 200px;
+                margin-bottom: 1rem;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
         }
     }
 }
