--- a/resources/scss/components/_chapter.scss
+++ b/resources/scss/components/_chapter.scss
@@ -1,17 +1,15 @@
-.step {
+.chapter {
     &.debug {
-        background-color: rgba($danger, .2) !important;
+        background-color: rgba($primary, .2) !important;
         padding: .5rem;
         border-radius: $border-radius;
 
         position: relative;
 
         &::before {
-            content: "step";
+            content: "chapter";
             position: absolute;
             right: 1rem;
         }
     }
-
-
 }
