--- a/resources/scss/components/_form_wrapper.scss
+++ b/resources/scss/components/_form_wrapper.scss
@@ -1,8 +1,8 @@
 .form-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // height: 100vh;
 
     .form {
         width: 100%;
