--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -10,7 +10,7 @@
 
 @import "components/form";
 @import "components/form_wrapper";
-@import "components/fieldtype";
-@import "components/text_input";
-@import "components/step";
-@import "components/chapter";
+@import "components/fieldtypes/fieldtype";
+@import "components/fieldtypes/text_input";
+@import "components/layout/step";
+@import "components/layout/chapter";
