--- a/resources/scss/components/_conclusion.scss
+++ b/resources/scss/components/_conclusion.scss
@@ -1,7 +1,6 @@
 .conclusion {
     &.debug {
-        background-color: rgba($primary, .3) !important;
+        background-color: rgba(purple, .3) !important;
         padding: .5rem;
-        border-radius: $border-radius;
     }
 }
