--- a/resources/scss/components/fieldtypes/_text_input.scss
+++ b/resources/scss/components/fieldtypes/_text_input.scss
@@ -3,11 +3,11 @@
         background-color:  transparent;
         border-radius: 0;
         border-color: transparent;
-        border-bottom: 1px solid $gray-400;
+        border-bottom: 1px solid black;
 
         &:focus,
         &:active {
-            border-bottom: 1px solid $body-color;
+            border-bottom: 1px solid black;
             box-shadow: none;
         }
     }
