--- a/resources/scss/components/layout/_step.scss
+++ b/resources/scss/components/layout/_step.scss
@@ -1,8 +1,7 @@
 .step {
     &.debug {
-        background-color: rgba($danger, .2) !important;
+        background-color: rgba(orange, .2) !important;
         padding: .5rem;
-        border-radius: $border-radius;
 
         position: relative;
 
