--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -8,3 +8,4 @@
 @import "components/fieldtypes/text_input";
 @import "components/layout/step";
 @import "components/layout/chapter";
+@import "components/wire_loading";
